@startuml TrainingDataModel_Full
' Full database diagram for TrainingDataModel

entity "User" as User {
  *Id : int
  Name : string
  Email : string
  Role : string
  CreatedAt : DateTime
  IsTrainer : bool
  IsAdminUser : bool
}

entity "BillingInvoice" as BillingInvoice {
  *Id : int
  Amount : decimal
  Date : DateTime
  CustomerId : int
  Status : string
  PaidDate : DateTime
}

entity "Customer" as Customer {
  *Id : int
  Name : string
  Email : string
  Address : string
  PostalCode : string
  City : string
  Country : string
  Phone : string
  LogoImagePath : string
}

entity "DailyUsageStatistic" as DailyUsageStatistic {
  *Id : int
  Date : DateTime
  Usage : decimal
  UserId : int
  RegisteredModuleId : int
}


entity "RegisteredCourse" as RegisteredCourse {
  *Id : int
  Title : string
  Description : string
  StartDate : DateTime
  EndDate : DateTime
  CustomerId : int
  TrainerId : int
}

entity "RegisteredModule" as RegisteredModule {
  *Id : int
  Title : string
  Description : string
  StartDate : DateTime
  EndDate : DateTime
  RegisteredCourseId : int
  TrainerId : int
}

entity "StudentEnrollment" as StudentEnrollment {
  *Id : int
  *UserId : int
  *RegisteredCourseId : int
  *VirtualMachineId : int
}

entity "RDPFile" as RDPFile {
  *Id : int
  Path : string
  CreatedAt : DateTime
  *VirtualMachineId : int
}

entity "SSHFile" as SSHFile {
  *Id : int
  Path : string
  CreatedAt : DateTime
  *VirtualMachineId : int
}

entity "VirtualMachine" as VirtualMachine {
  *Id : int
  Name : string
  VMImageReferenceId : int
  VmTypeId : int
  VMUsagePropertiesId : int
  VMPropertiesId : int
  RDPFileId : int
  SSHFileId : int
  UserId : int
  CreatedAt : DateTime
}

entity "VMImageReference" as VMImageReference {
  *Id : int
  Name : string
  Publisher : string
  Offer : string
  Sku : string
  Version : string
  CreatedAt : DateTime
}

entity "VMType" as VMType {
  *Id : int
  Name : string
  AzureName : string
  CpuCores : int
  MemoryInGB : int
  CreatedAt : DateTime
}

entity "VMUsageProperties" as VMUsageProperties {
  *Id : int
  Name : string
  PreferedStartTime : Time
  PreferedEndTime : Time
  PreferedDailyHourUsage : int
  CreatedAt : DateTime
}


entity "VMProperties" as VMProperties {
  *Id : int
  Name : string
  Description : string
  IsWindows11 : bool
  IsOffice2021 : bool
  IsTerraformInstalled : bool
  IsPhotoshopInstalled : bool
  CreatedAt : DateTime
}


'"Relationships"
Customer --{ BillingInvoice : "1 to many"
Customer --{ User : "1 to many"

User --{ DailyUsageStatistic : "1 to many"
User --{ StudentEnrollment : "1 to many"

VMType --{ VirtualMachine : "1 to many"
VMImageReference --{ VirtualMachine : "1 to many"
VMUsageProperties --{ VirtualMachine : "1 to many"
VMProperties --{ VirtualMachine : "1 to many"
SSHFile -- VirtualMachine : "(Assigned to)"
RDPFile -- VirtualMachine : "(Assigned to)"

VirtualMachine -- StudentEnrollment : "(Assigned to)"

RegisteredModule -- DailyUsageStatistic : "1 to many"

RegisteredCourse )-- User : "(Trainer link)"
RegisteredCourse --{ StudentEnrollment : "1 to many"
RegisteredCourse --{ RegisteredModule : "1 to many"
@enduml
